--- a/views/visit.erb
+++ b/views/visit.erb
@@ -10,6 +10,7 @@ $(function() {
   // после загрузки страницы
 
   $('#color').simplecolorpicker();
+  $('#datetimepicker').datetimepicker();
 
 });
 
@@ -25,12 +26,12 @@ $(function() {
 
   <div class="form-group">
     <label>Ваш телефон</label>
-    <input name="phone" type="text" class="form-control" placeholder="Ваш телефон" value="<%= @phone %>">
+    <input  name="phone" type="text" class="form-control" placeholder="Ваш телефон" value="<%= @phone %>">
   </div>
 
   <div class="form-group">
     <label>Когда вас ждать?</label>
-    <input name="datetime" type="text" class="form-control" placeholder="Введите дату и время" value="<%= @datetime %>">
+    <input id="datetimepicker" name="datetime" type="text" class="form-control" placeholder="Введите дату и время" value="<%= @datetime %>">
   </div>
 
 
